--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.1",
     "node-sass": "^5.0.0",
+    "notistack": "^1.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
