--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-json-view": "^1.21.3",
+    "react-number-format": "^4.5.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
@@ -30,6 +33,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-text-mask": "^5.4.6",
     "@types/redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.8"
   },
