--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
@@ -43,7 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "react-scripts build && cp build/index.html build/200.html",
-    "deploy" : "cd build/ && surge --domain http://furry-line.surge.sh/"
+    "deploy": "cd build/ && surge --domain http://furry-line-vishal.surge.sh/"
   },
   "eslintConfig": {
     "extends": [
