--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "scripts": {
     "start": "SET PORT=3001 && react-scripts start",
+    "startMac": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "react-scripts build && cp build/index.html build/200.html",
